--- a/nexo-ta/package.json
+++ b/nexo-ta/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.13",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.7.4",
